fixed z-index

--- a/css/products.css
+++ b/css/products.css
@@ -77,7 +77,7 @@
     top: 100%;
     right: 0;
     overflow: hidden;
-    z-index: 99;
+    z-index: 100;
 }
 
 .select-hide {
